assets/main.scss
@use 'assets/variables' as *;

html,
body {
    padding: 0;
    margin: 0;
    font-family: $font-family-main;
    background-color: $white;
    font-size: $font-size-xs;
    font-smooth: antialiased;
    -webkit-font-smoothing: antialiased;    
    -moz-osx-font-smoothing: grayscale;
}

#__nuxt {
    height: 100%;

    // For screenshots
    height: calc(100% - 20px);
    margin: 10px;
}

* {
    box-sizing: border-box;
}

html,
body,
#__next {
    height: 100vh;
    width: 100vw;
    overflow-x: hidden;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.inner-container {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    padding: $spacing-md;
    display: flex;
    flex-direction: column;
    gap: $spacing-sm;
    color: $black;

    @media (max-width: 1000px) {
        margin: 0;
    }
}

.max-width {
    width: 100%;
    margin-left: auto;
    margin-right: auto;

    &.xl {
        max-width: 1600px;
    }

    &.lg {
        max-width: 1200px;
    }

    &.md {
        max-width: 800px;
    }

    &.sm {
        max-width: 600px;
    }
}

.max-height {
    height: 100%;
}

.scrollable {
    overflow-y: auto;
    max-height: 100%;

    &.has-wizard {
        max-height: calc(100% - 85px);
    }
}

/* Notifications */

.notification {
    padding: $spacing-xs $spacing-sm;
    font-size: $font-size-xs;
    border-radius: $br-lg;
    gap: $spacing-xs;
    color: $brand;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    text-align: left;

    &.vertical {
      flex-direction: column;
      font-weight: bold;
      gap: $spacing-xxxs;
      text-align: center;
    }

    .iconify {
        margin: 0;
    }

    section {
        display: flex;
        flex-direction: column;
        gap: $spacing-xxs;

        h4, p {
            margin: 0;
        }

        p {
            opacity: 0.75;   
        }
    }

    &.info {
        background: rgba($brand, 0.1);
        color: rgba($black, 0.5);
    }

    &.warning {
        background: rgba($orange, 0.1);
        color: $orange-dark;
    }

    &.success {
        background: rgba($mint, 0.1);
        color: $mint-dark;
    }

    &.error {
        background: rgba($red, 0.1);
        color: $red;
    }

}

.empty {
    display: flex;
    flex-direction: column;
    gap: $spacing-sm;
    justify-content: center;
    align-items: center;
    padding: $spacing-md 0;

    * {
        margin: 0;
    }
}

/* Popups */

.popup {
    position: absolute;
    top: calc(100% + 2px);
    z-index: 1000;
    display: none;
    background-color: $white;
    box-shadow: 0 0 10px rgba($black, 0.1);
    padding: $spacing-sm;
    border-radius: $br-md;
    border: 1px solid rgba($black, 0.2);

    &.clean {
        box-shadow: none;
        padding: 0;
        border: none;
    }

    &.list {
        width: 240px;
        overflow-y: auto;
        display: flex;
        flex-direction: column;
        gap: 2px;

        div {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            gap: $spacing-xs;
            padding: $spacing-xs $spacing-xs;
            border-radius: $br-md;
            text-transform: capitalize;
            transition: background-color 0.18s ease;
            color: $black;
            font-family: $font-family-main;
            font-weight: 400;
            text-decoration: none;

            &:hover {
                background-color: rgba($brand, 0.05);
                color: $brand;
            }

            &.active {
                background-color: rgba($brand, 1);
                color: $white;
            }
        }
    }

    &.right {
        right: 0;
    }

    &.left {
        left: 0;
    }
}

/* Typography */

h1,
h2,
h3,
h4,
h5 {
    font-family: $font-family-main;
    font-weight: 500;
}

h1 {
    font-size: $font-size-xl;
    margin: 0 0 $spacing-md 0;
}

h2 {
    font-size: $font-size-lg;
    margin: $spacing-md 0;
}

h3 {
    font-size: $font-size-md;
    margin: 0 0 $spacing-sm 0;
}

h4 {
    font-size: $font-size-sm;
    margin: $spacing-md 0;
}

h5 {
    font-size: $font-size-sm;
    margin: $spacing-md 0;
}

p {
    margin: 0 0 $spacing-sm 0;
    line-height: 1.5;
}

p.center {
    text-align: center;
}

p.details {
    color: rgba($black, 0.5) !important;
    font-size: $font-size-xs;
}

p.or-select {
    margin: $spacing-md 0;
    color: rgba($black, 0.5);
    font-size: $font-size-xxs;
    width: 100%;
    text-align: center;
    position: relative;

    &:before {
        width: 35%;
        content: '';
        display: block;
        position: absolute;
        top: 50%;
        left: 0;
        border-top: 1px solid rgba($black, 0.1);
    }

    &:after {
        width: 35%;
        content: '';
        display: block;
        position: absolute;
        top: 50%;
        right: 0;
        border-top: 1px solid rgba($black, 0.1);
    }
}

pre {
    background-color: rgba($brand, .05);
    color: $black;
    border-radius: $br-md;
    padding: $spacing-sm;
    margin: 0 0 $spacing-md 0;
    overflow-x: auto;
    max-height: 400px;
    font-size: $font-size-xs;
}

/* Table */

table {
    width: 100%;
    border-collapse: collapse;
    margin: 0 0 $spacing-md 0;
}

th {
    text-align: left;
    padding: $spacing-xs;
    border-bottom: 1px solid rgba($black, 0.1);
}

td {
    padding: $spacing-xs;
    border-bottom: 1px solid rgba($black, 0.1);
}

tr:last-child td {
    border-bottom: none;
}

/* Forms */

label {
    display: block;
    font-size: $font-size-xs;
    color: rgba($black,0.5);
    font-weight: 400;
    background-color: $white;
    padding: calc($spacing-xxs + 2px) $spacing-xs 0 $spacing-xs;
}
/* ... */

